--- a/less/tsl.less
+++ b/less/tsl.less
@@ -19,7 +19,7 @@
     display: grid;
     grid-template-columns: 80px auto;
     justify-items: center;
-    column-gap: 16px;
+    column-gap: 8px;
     margin: 8px 0;
 
     img {
@@ -27,11 +27,16 @@
     }
 
     .basic-details {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 8px;
+      row-gap: 4px;
       width: 100%;
 
-      input {
+      input:first-of-type {
         font-size: 2.5em;
         height: auto;
+        grid-column: 1 / -1;
       }
     }
   }
