Fixed classification dropdown text.

--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -27,7 +27,7 @@
       </select>
       <select name="data.vehicle.classification">
         {{#select data.vehicle.classification}}
-          <option value="none">{{localize "tsl.labels.type"}}</option>
+          <option value="none">{{localize "tsl.labels.classification"}}</option>
           <option value="steamhorse">{{localize "tsl.classifications.steamhorse"}}</option>
           <option value="auto">{{localize "tsl.classifications.auto"}}</option>
           <option value="heavy">{{localize "tsl.classifications.heavy"}}</option>
