Added warning indicator SVGs.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -47,8 +47,9 @@
       column-gap: 16px;
       place-items: center;
 
-      tbody:first-of-type {
-        font-size: 2em;
+      img {
+        border: none;
+        margin: 0;
       }
     }
 
