--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -57,8 +57,8 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td colspan="2">500</i></td>
+            <tr style="height:50px">
+              <td colspan="2"><img height="48px" src="modules/tsl-module/img/fuel.svg"/></td>
             </tr>
           </tbody>
           <thead>
@@ -69,7 +69,7 @@
           </thead>
           <tbody>
             <tr>
-              <td>500</td>
+              <td><img height="26px" src="modules/tsl-module/img/hazard.svg"/></td>
               <td>
                 <input style="width:40px" name="data.stat.xlr8.temp" type="number" data-dtype="Number" value="{{data.stat.xlr8.temp}}" onfocus="this.select()"/>
               </td>
