Restyled stat block for all cases.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -2,6 +2,11 @@
   table {
     border: 1px solid black;
     border-collapse: collapse;
+    text-align: center;
+  }
+
+  .glow-red {
+    filter: invert(12%) sepia(99%) saturate(6635%) hue-rotate(3deg) brightness(114%) contrast(114%);
   }
 
   .top-details {
@@ -36,10 +41,6 @@
   
   .tslv-sheet-body {
     height: 82%;
-
-    table {
-      text-align: center;
-    }
 
     .tsl-summary {
       display: grid;
