Resized sheet, moved stat block to partial.

--- a/less/tsl.less
+++ b/less/tsl.less
@@ -42,7 +42,7 @@
   .tslv-sheet-body {
     height: 82%;
 
-    .tsl-summary {
+    .tsl-core-stats {
       display: grid;
       grid-template-columns: repeat(6, 1fr);
       column-gap: 16px;
@@ -58,7 +58,7 @@
       height: 100%;
 
       .editor-content {
-        height: 525px;
+        height: 610px;
       }
     }
   }
