Laid out current speed table.

--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -52,7 +52,56 @@
       {{> "modules/tsl-module/templates/partials/tsl-core-stats.hbs"}}
       <div class="tsl-picture-row">
         {{!-- Three columns - data table, pic, data table. --}}
-        <div style="background:red"></div>
+        <div>
+          <table>
+            <thead>
+              <tr>
+                <th>
+                  <a><i class="fas fa-minus"></i></a>
+                </th>
+                <th>Current Sp</th>
+                <th>
+                  <a><i class="fas fa-plus"></i></a>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">15,500</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th colspan="3">MPH</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">15,500</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th colspan="3">KPH</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">15,500</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th colspan="3">Squares / Round</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3">15,500</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
         <div style="background:blue"></div>
         <div style="background:red"></div>
       </div>
