--- a/less/tsl.less
+++ b/less/tsl.less
@@ -59,6 +59,82 @@
       grid-template-columns: 145px 1fr 145px;
       column-gap: 8px;
       height: 375px;
+
+      .tsl-gauge {
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        row-gap: 4px;
+        place-items: center;
+        font-size: 1.25em;
+
+        .tsl-current-value {
+          display: grid;
+          grid-template-columns: 15px 1fr 15px;
+          width: 90%;
+          place-items: center;
+        }
+
+        .gauge {
+          display: inline-block;
+          position: relative;
+
+          .dial {
+            display: inline-block;
+            background: #222222;
+            width: 140px;
+            height: 70px;
+            border-top-left-radius: 125px;
+            border-top-right-radius: 125px;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
+          }
+
+          .band { // on speedometer only; remove for fuel gauge
+            border-top: 6px solid green;
+            border-right: 6px solid red;
+          }
+
+          .needle {
+            display: inline-block;
+            width: 3px;
+            height: 60px;
+            background: #999999;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+            border-top-left-radius: 200%;
+            border-top-right-radius: 200%;
+            left: 66px;
+            top: 8px;
+            position: absolute;
+            transform: rotate(88deg); 
+            // -88deg to 88deg range. calc with -88 + (% of max * 176)
+            transform-origin: bottom;
+          }
+
+          .pushed { // for speedometer only; when pushed past Top Speed
+            animation: move 0.25s infinite;
+          }
+
+          @keyframes move {
+            0% {
+              transform: rotate(85deg);  
+            }
+            100% {
+              transform: rotate(88deg);
+            }
+          }
+        }
+      }
+
+      .tsl-speed-3 {
+        display: grid;
+        grid-template-columns: 30px 1fr 8px 1fr;
+        place-items: center;
+
+        span:first-of-type {
+          font-weight: bold;
+        }
+      }
     }
 
     .tsl-final-row {
