Localized remaining summary page text.

--- a/templates/tsl-vehicle-sheet.hbs
+++ b/templates/tsl-vehicle-sheet.hbs
@@ -56,7 +56,7 @@
           <table>
             <thead>
               <tr>
-                <th>Current Speed</th>
+                <th>{{localize "tsl.summaryPage.currentSpeed"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -115,7 +115,7 @@
           <table>
             <thead>
               <tr>
-                <th colspan="2">Hit Points</th>
+                <th colspan="2">{{localize "tsl.summaryPage.hitPoints"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -126,14 +126,21 @@
                 </td>
               </tr>
               <tr>
-                <td style="font-size:1.2em"><b>Armor Class: </b>500</td>
+                <td>
+                  <div class="tsl-defenses">
+                    <span><b>AC</b></span>
+                    <span>50</span>
+                    <span><b>HD</b></span>
+                    <span>50</span>
+                  </div>
+                </td>
               </tr>
             </tbody>
           </table>
           <table>
             <thead>
               <tr>
-                <th>Curb Weight</th>
+                <th>{{localize "tsl.summaryPage.curbWeight"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -148,7 +155,7 @@
           <table>
             <thead>
               <tr>
-                <th colspan="3">Hours of Operation</th>
+                <th colspan="3">{{localize "tsl.summaryPage.hoursOfOperation"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -174,9 +181,9 @@
             </tbody>
             <thead>
               <tr>
-                <th>Base</th>
-                <th>Ld</th>
-                <th>Mods</th>
+                <th>{{localize "tsl.summaryPage.base"}}</th>
+                <th>{{localize "tsl.summaryPage.ld"}}</th>
+                <th>{{localize "tsl.summaryPage.mods"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -186,14 +193,14 @@
                 <td><input style="width:40px" name="" type="number" data-dtype="Number" value=""/></td>
               </tr>
               <tr>
-                <td colspan="3"><b>Fuel Capacity: </b>1,200</td>
+                <td colspan="3"><b>{{localize "tsl.summaryPage.fuelCap"}}:&nbsp;</b>1,200</td>
               </tr>
             </tbody>
           </table>
           <table>
             <thead>
               <tr>
-                <th colspan="2">Ramming Damage</th>
+                <th colspan="2">{{localize "tsl.summaryPage.rammingDamage"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -203,8 +210,8 @@
             </tbody>
             <thead>
               <tr>
-                <th>Base</th>
-                <th>Mods</th>
+                <th>{{localize "tsl.summaryPage.base"}}</th>
+                <th>{{localize "tsl.summaryPage.mods"}}</th>
               </tr>
             </thead>
             <tbody>
@@ -220,7 +227,7 @@
         <table>
           <thead>
             <tr>
-              <th>Onboard Weapons</th>
+              <th>{{localize "tsl.summaryPage.onboardWeapons"}}</th>
             </tr>
             <tr>
               <th>Stat Cell Headers Go Here</th>
